Fix content shift, convert px to rem

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,7 +52,7 @@
   align-items: center;
   padding: 2rem;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 48rem) {
     padding: 1rem;
   }
 }
