--- a/src/app/components/creator/creator.component.scss
+++ b/src/app/components/creator/creator.component.scss
@@ -9,7 +9,7 @@
   .tag-input {
     display: flex;
     flex-direction: row;
-    gap: 2px;
+    gap: 0.125rem;
   }
 }
 
