--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,7 +5,7 @@
   align-items: center;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 64rem) {
   sl-card:not(.loading)::part(body) {
     min-height: 5.5rem;
   }
